# leapmotion_pywrapper

./: CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: conda.yml  format.yml  pip.yml  wheels.yml
docs/: Makefile  conf.py  index.rst  leapmotion_pywrapper.rst  make.bat
src/: Connection.cpp  Connection.hpp  main.cpp  test.cpp
tests/: test_basic.py
